--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="row">
 
             <!-- Entries Column -->
-            <div class="col-md-8" style="height: 100vh;">
+            <div class="col-md-8" style="height: 50vh;">
                 
                 <!-- Main Image -->
                 <img class="img-responsive" src="photo.jpg" alt=""><br>
@@ -62,7 +62,7 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>John Doe</b></div><br>
+                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Rui Guan</b></div><br>
                 <p><b>rui.guan@upf.edu</b><br>
                 <p>Random Department<br>
                 University of Randomness<br>
