--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
         <div class="row">
 
             <!-- Entries Column -->
-            <div class="col-md-8" style="height: 50vh;">
+            <div class="col-md-8" style="height: 100vh;">
                 
                 <!-- Main Image -->
-                <img class="img-responsive" src="photo.jpg" alt=""><br>
+                <img class="img-responsive" src="photo.jpg" alt="" width="400" 
+                height="400"><br>
                 
                 <div style="margin-top:3%; text-align:justify;">                
 					<p>Welcome to my website! </p>
