--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
         <div class="row">
 
             <!-- Entries Column -->
-            <div class="col-md-8" style="height: 100vh;">
+            <div class="col-md-8" style="height: 20vh;">
                 
                 <!-- Main Image -->
-                <img class="img-responsive" src="photo.jpg" alt="" width="400" 
-                height="400"><br>
+                <img class="img-responsive" src="photo.jpg" alt="" width="10"  height="10"><br>
                 
                 <div style="margin-top:3%; text-align:justify;">                
 					<p>Welcome to my website! </p>
