--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		  <ul class="nav navbar-nav">
 				  <li><a href="index.html">Home</a></li>
-				  <li><a href="#">Research</a></li>
+				  <li><a href="research.html">Research</a></li>
 
 		  </ul>
 		</div>
@@ -46,10 +46,10 @@
         <div class="row">
 
             <!-- Entries Column -->
-            <div class="col-md-8" style="height: 20vh;">
+            <div class="col-md-8" style="height: 100vh;">
                 
                 <!-- Main Image -->
-                <img class="img-responsive" src="photo.jpg" alt="" width="10"  height="10"><br>
+                <img class="img-responsive" src="photo.jpg" alt="" width="400"  height="400"><br>
                 
                 <div style="margin-top:3%; text-align:justify;">                
 					<p>Welcome to my website! </p>
