--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Rui Guan</title>
+    <title>Chenfanfu Jiang</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./asset/bootstrap.min.css">
@@ -32,8 +33,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./research.html">Research</a></li>
-
+                    <li><a href="./publications.html">Publications</a></li>
+                    <li><a href="./gallery.html">Research Gallery</a></li>
+                    <li><a href="./group.html">Group</a></li>
+                    <li><a href="./teaching.html">Teaching</a></li>
                 </ul>
             </div>
         </div>
@@ -56,16 +59,14 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-9">
-                <div style="font-family: &#39;Oswald&#39;, sans-serif; font-size: 40 px;"><b>Rui Guan</b></div><br>
-                
-                <p>Welcome to my website! </p>
-                <p>I am a Ph.D. candidate in the Department of Economics and Business at Universitat Pompeu Fabra. My research focuses on examining when individuals behave rationally based on evidence from economics and the cognitive sciences.</p>
+                <div style="font-family: &#39;Oswald&#39;, sans-serif; font-size: 32px;"><b>Chenfanfu Jiang</b></div><br>
+                <p>Assistant Professor<br>Department of Mathematics<br>
+                    <!-- (affil.) Penn Institute for Computational Science (PICS) <br> Applied Mathematics and Computational Science (AMCS) <br> SIG Center for Computer Graphics <br> General -->
+                    <!-- Robotics, Automation, Sensing & Perception (GRASP) <br> -->
+                    University of California, Los Angeles<br> cffjiang@math.ucla.edu
+                </p>
 
-                <p>Research Interests: Microeconomics, Behavioral Economics, and Experimental Economics.</p>
-
-                <p>Email: <a href="rui.guan@upf.edu">rui.guan@upf.edu</a> </p>
-
-                <p>Here is my <a href="./cv.pdf">Curriculum Vitae</a> (7/2021)&nbsp&nbsp&nbsp </p>
+                <p><a href="./cv.pdf">CV</a> (7/2021)&nbsp&nbsp&nbsp </p>
 
                 <!-- <p style="color:#851e1e">
                     <b>
@@ -73,6 +74,22 @@
                     </b>
                 </p> -->
             </div>
+
+
+            <div class="col-md-8" style="height">
+
+                <p> Chenfanfu Jiang is an assistant professor of Mathematics at the University of California, Los Angeles (UCLA). 
+                </p>
+
+                <p>
+                    Jiang was an assistant professor of Computer and Information Science at the University of Pennsylvania 2017-2021. He received the PhD degree (`15) from UCLA co-advised by Demetri Terzopoulos and Joseph Teran. He was as a Postdoctoral Scholar at UCLA 2015-2017. He completed a B.S. in Physics (`10) from the Special Class for the Gifted Young (SCGY) at the University of Science and Technology of China (USTC). 
+                </p>
+
+                <p>Jiang is a recipient of the UCLA Edward K. Rice Outstanding Doctoral Student Award (2015), NSF CRII award (2018) and NSF CAREER award (2020). His current research interests include physics-based modeling/simulation and scientific computing.
+                    He works on numerical algorithms facilitating advancements in computer graphics, computational physics, and inverse problems (mainly in structural mechanics, vision, and robotics).
+                </p>
+            </div>
+
 
 
 
