--- a/index.html
+++ b/index.html
@@ -53,14 +53,10 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-9">
-              <div style="font-family: &#39;Oswald&#39;, sans-serif; font-size: 32px;"><b>Chenfanfu Jiang</b></div><br>
-              <p>Assistant Professor<br>Department of Mathematics<br>
-                  <!-- (affil.) Penn Institute for Computational Science (PICS) <br> Applied Mathematics and Computational Science (AMCS) <br> SIG Center for Computer Graphics <br> General -->
-                  <!-- Robotics, Automation, Sensing & Perception (GRASP) <br> -->
-                  University of California, Los Angeles<br> cffjiang@math.ucla.edu
-              </p>
+              <div style="font-family: &#39;Oswald&#39;, sans-serif; font-size: 32px;"><b>Rui Guan</b></div><br>
+          
 
-              <p><a href="./cv.pdf">CV</a> (7/2021)&nbsp&nbsp&nbsp </p>
+              <p>Here is my <a href="./cv.pdf">Curriculum Vitae</a>. </p>
 
               <!-- <p style="color:#851e1e">
                   <b>
