--- a/research.html
+++ b/research.html
@@ -2,50 +2,40 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Chenfanfu Jiang</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./asset/bootstrap.min.css">
-    <script src="./asset/jquery.min.js.download"></script>
-    <script src="./asset/bootstrap.min.js.download"></script>
-    <link href="./asset/css" rel="stylesheet" type="text/css">
-
-    <!-- <link rel="shortcut icon" href="favicon.ico">   -->
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-
-    <!-- Plugins CSS -->
-    <link rel="stylesheet" href="asset/plugins/font-awesome/css/font-awesome.css">
-
-
-</head>
-
-<body data-new-gr-c-s-check-loaded="14.993.0" data-gr-ext-installed="">
+  <html lang="en">
+    <head>
+      <title>Rui Guan</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+      <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+    </head>
+    <body>
+    
 
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+	  <div class="container">
+		<div class="navbar-header">
+		  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
 					</button>
-                <a href="./index.html" class="navbar-brand">Rui Guan</a>
-            </div>
+		</div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="./research.html">Research</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		  <ul class="nav navbar-nav">
+				  <li><a href="index.html">Home</a></li>
+				  <li><a href="research.html">Research</a></li>
+		  </ul>
+		</div>
+	  </div>
+	</nav>
 
     <!-- Page Content -->
     <div class="container">
