--- a/index.html
+++ b/index.html
@@ -39,22 +39,26 @@
 	</nav>
   <!-- Page Content -->
     <div class="container">
-
         <div class="row">
-
             <!-- Entries Column -->
             <div class="col-md-4" style="height">
-
               <!-- Main Image -->
               <img class="img-responsive" width="240" src="./asset/profile.jpg" alt=""><br>
 
               <!--                <div style="margin-top:3%; text-align:justify;">
               </div> -->
           </div>
-
             <!-- Contact Info on the Sidebar -->
-            <div class="col-md-9">
+            <div class="col-md-8">
               <div style="font-family: &#39;Oswald&#39;, sans-serif; font-size: 32px;"><b>Rui Guan</b></div><br>
+
+              <p>Welcome to my website! </p>
+
+              <p>I am a Ph.D. candidate in the Department of Economics and Business at Universitat Pompeu Fabra. My research focuses on examining when individuals behave rationally based on evidence from economics and the cognitive sciences.</p>
+
+              <p>Research Interests: Microeconomics, Behavioral Economics, and Experimental Economics.</p>
+
+              <p>Email: rui.guan@upf.edu </p>
 
               <p>Here is my <a href="./cv.pdf">Curriculum Vitae</a>. </p>
 
