--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <!-- Entries Column -->
             <div class="col-md-4" style="height">
               <!-- Main Image -->
-              <img class="img-responsive" width="240" src="./asset/profile.jpg" alt=""><br>
+              <img class="img-responsive" width="250" src="./asset/profile.jpg" alt=""><br>
               <!--                <div style="margin-top:3%; text-align:justify;">
               </div> -->
           </div>
@@ -59,7 +59,7 @@
 
               <p>Research Interests: Microeconomics, Behavioral Economics, and Experimental Economics.</p>
 
-              <p>Email: rui.guan@upf.edu </p>
+              <p>Email: <a href="rui.guan@upf.edu">rui.guan@upf.edu</a> </p>
 
               <p>Here is my <a href="./cv.pdf">Curriculum Vitae</a>. </p>
 
@@ -76,7 +76,7 @@
     <!-- /.container -->
     
     <!-- Other people may like it too! -->
-    <a style="color:#b5bec9;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">Plain Academic</a> 
+
     
 </body>
 
