--- a/research.html
+++ b/research.html
@@ -14,7 +14,7 @@
       <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
       <style>
         h1 {text-align: center;}
-        p {text-align: center;}
+        p {text-align: center; font-size: 20px;}
         div {text-align: center;}
         </style>
     </head>
