--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   p {
     font-size: 20px;
   }
+  nav ul {
+     list-style: none;
+     width: 100%;
+    text-align: right;
+  }
 </style>
 </head>
 <body>
