--- a/research.html
+++ b/research.html
@@ -16,6 +16,11 @@
         h1 {text-align: center;}
         p {text-align: center; font-size: 20px;}
         div {text-align: center;}
+        nav ul {
+     list-style: none;
+     width: 100%;
+     text-align: right;
+  }
         </style>
     </head>
     <body>
