--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <style>
   p {
     font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
   }
   nav ul {
      list-style: none;
@@ -60,15 +61,15 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-8">
-              <div style="font-family: &#39;Oswald&#39;, sans-serif; font-size: 32px;"><b>Rui Guan</b></div><br>
+              <div style="font-family: &#39;Oswald&#39;, sans-serif; font-size: 34px;"><b>Rui Guan</b></div><br>
 
-              <p>Welcome to my website! </p>
+              <p>Welcome to my website! </p><br>
 
-              <p>I am a Ph.D. candidate in the Department of Economics and Business at Universitat Pompeu Fabra. My research focuses on examining when individuals behave rationally based on evidence from economics and the cognitive sciences.</p>
+              <p>I am a Ph.D. candidate in the Department of Economics and Business at Universitat Pompeu Fabra. My research focuses on examining when individuals behave rationally based on evidence from economics and the cognitive sciences.</p><br>
 
-              <p>Research Interests: Microeconomics, Behavioral Economics, and Experimental Economics.</p>
+              <p>Research Interests: Microeconomics, Behavioral Economics, and Experimental Economics.</p><br>
 
-              <p>Email: <a href="rui.guan@upf.edu">rui.guan@upf.edu</a> </p>
+              <p>Email: <a href="rui.guan@upf.edu">rui.guan@upf.edu</a> </p><br>
 
               <p>Here is my <a href="./cv.pdf">Curriculum Vitae</a>. </p>
 
