--- a/research.html
+++ b/research.html
@@ -13,9 +13,12 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
       <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
       <style>
-        h1 {text-align: center;}
-        p {text-align: center; font-size: 20px;}
-        div {text-align: center;}
+        
+        p {text-align: justify; 
+          font-size: 15px;
+          font-family: Arial, Helvetica, sans-serif;
+        }
+        
         nav ul {
      list-style: none;
      width: 100%;
