--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 
               <p>Research Interests: Microeconomics, Behavioral Economics, and Experimental Economics.</p><br>
 
-              <p>Email: <a href="rui.guan@upf.edu">rui.guan@upf.edu</a> </p><br>
+              <p>Email: <a href="mailto: rui.guan@upf.edu">rui.guan@upf.edu</a> </p><br>
 
-              <p>Here is my <a href="./cv.pdf">Curriculum Vitae</a>. </p>
+              <p>Here is my <a href="./asset/cv.pdf">Curriculum Vitae</a>. </p>
 
               <!-- <p style="color:#851e1e">
                   <b>
