--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   nav ul {
      list-style: none;
      width: 100%;
-    text-align: right;
+     text-align: right;
   }
 </style>
 </head>
@@ -61,7 +61,7 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-8">
-              <div style="font-family: &#39;Oswald&#39;, sans-serif; font-size: 34px;"><b>Rui Guan</b></div><br>
+              <div style="font-family: &#39;Oswald&#39;, sans-serif; font-size: 34px; style=color:#3d85c6"><b>Rui Guan</b></div><br>
 
               <p>Welcome to my website! </p><br>
 
