--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
               <p>Welcome to my website! </p><br>
 
-              <p>I am a Ph.D. candidate in the Department of Economics and Business at Universitat Pompeu Fabra. My research focuses on examining when individuals behave rationally based on evidence from economics and the cognitive sciences.</p><br>
+              <p>I am a Ph.D. candidate in the Department of Economics and Business at <a href="https://www.upf.edu/en/web/econ">Universitat Pompeu Fabra</a> . My research focuses on examining when individuals behave rationally based on evidence from economics and the cognitive sciences.</p><br>
 
               <p>Research Interests: Microeconomics, Behavioral Economics, and Experimental Economics.</p><br>
 
