--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
   }
-  nav ul {
-     list-style: none;
-     width: 100%;
-     text-align: right;
-  }
+
 </style>
 </head>
 <body>
@@ -41,7 +37,7 @@
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		  <ul class="nav navbar-nav">
+		  <ul class="nav navbar-nav" style="text-align: right;">
 				  <li><a href="index.html">Home</a></li>
 				  <li><a href="research.html">Research</a></li>
 		  </ul>
