--- a/research.html
+++ b/research.html
@@ -40,7 +40,7 @@
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		  <ul class="nav navbar-nav">
+		  <ul class="nav navbar-nav" style="text-align: right;">
 				  <li><a href="index.html">Home</a></li>
 				  <li><a href="research.html">Research</a></li>
 		  </ul>
