--- a/index.html
+++ b/index.html
@@ -61,13 +61,27 @@
 
               <p>Welcome to my website! </p><br>
 
-              <p>I am a Ph.D. candidate in the Department of Economics and Business at <a href="https://www.upf.edu/en/web/econ" target="_blank">Universitat Pompeu Fabra</a>. My research focuses on examining when individuals behave rationally based on evidence from economics and the cognitive sciences.</p><br>
+              <p>I am a Ph.D. candidate  in Economics at <a href="https://www.upf.edu/en/web/econ" target="_blank">Universitat Pompeu Fabra</a>. My research focuses on examining when individuals behave rationally based on evidence from economics and the cognitive sciences.</p><br>
 
-              <p>Research Interests: Microeconomics, Behavioral Economics, and Experimental Economics.</p><br>
+              <div class="col-md-4">
 
-              <p>Email: <a href="mailto: rui.guan@upf.edu">rui.guan@upf.edu</a> </p><br>
+                <ul  style="text-align: lef;">
+                  <li>Microeconomics</li>
+                  <li>Behavioral Economics</li>
+                  <li>Experimental Economics</li>
+              </ul>
 
-              <p>Here is my <a href="./asset/cv.pdf">Curriculum Vitae</a>. </p>
+              </div>
+
+              <div class="col-md-4">
+
+              
+                <p>Email: <a href="mailto: rui.guan@upf.edu">rui.guan@upf.edu</a> </p><br>
+
+                <p>Here is my <a href="./asset/cv.pdf">Curriculum Vitae</a>. </p>
+  
+
+              </div>
 
               <!-- <p style="color:#851e1e">
                   <b>
