--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 	  </div>
 	</nav>
   <!-- Page Content -->
+
+  <br>
+  <br>
     <div class="container">
         <div class="row">
             <!-- Entries Column -->
@@ -62,7 +65,7 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-8">
-              <div style="font-family: &#39;Oswald&#39;, sans-serif; font-size: 34px; style=color:#3d85c6"><b>Rui Guan</b></div>
+              <div style="font-family: &#39;Oswald&#39;, sans-serif; font-size: 34px; color:#3d85c6"><b>Rui Guan</b></div>
               <br>
               <p>Welcome to my website! </p>
            
