--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 					</button>
+          <a href="./index.html" class="navbar-brand">Rui Guan</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,10 +82,10 @@
               </div>
 
               
-              <div class="col-md-6">
+              <div class="col-md-8">
               
-                <p>Email: <a href="mailto: rui.guan@upf.edu">rui.guan@upf.edu</a> </p><br>
-
+                <p>Email: <a href="mailto: rui.guan@upf.edu">rui.guan@upf.edu</a> </p>
+                <br>
                 <p>Here is my <a href="./asset/cv.pdf">Curriculum Vitae</a>. </p>
   
               </div>
