--- a/research.html
+++ b/research.html
@@ -36,6 +36,7 @@
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 					</button>
+          <a href="./index.html" class="navbar-brand">Rui Guan</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
