--- a/research.html
+++ b/research.html
@@ -19,35 +19,33 @@
           font-family: Arial, Helvetica, sans-serif;
         }
         
-        nav ul {
-     list-style: none;
-     width: 100%;
-     text-align: right;
-  }
+
+
         </style>
     </head>
     <body>
     
     <!-- Navigation -->
-	<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-	  <div class="container">
-		<div class="navbar-header">
-		  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-					</button>
-          <a href="./index.html" class="navbar-brand">Rui Guan</a>
-		</div>
+<!-- Navigation -->
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <div class="container">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+        </button>
+        <a href="./index.html" class="navbar-brand">Rui Guan</a>
+  </div>
 
-		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		  <ul class="nav navbar-nav" style="text-align: right;">
-				  <li><a href="index.html">Home</a></li>
-				  <li><a href="research.html">Research</a></li>
-		  </ul>
-		</div>
-	  </div>
-	</nav>
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav" style="text-align: right;">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="research.html">Research</a></li>
+    </ul>
+  </div>
+  </div>
+</nav>
 
     <!-- Page Content -->
     <div class="container">
