--- a/index.html
+++ b/index.html
@@ -25,33 +25,56 @@
     font-family: Arial, Helvetica, sans-serif;
   }
 
+
+    nav{
+    display: flex;
+    position: fixed;
+    top:0;
+    width: 100%;
+    background-color: black;
+    overflow: auto;
+    height: auto;
+  }
+  .left-links{
+    flex:1 1 200px;
+  }
+  .links {
+    display: inline-block;
+    text-align: center;
+    padding: 14px;
+    color: white;
+    text-decoration: none;
+    font-size: 17px;
+    font-weight: bolder;
+  }
+  .links:hover {
+    color: white;
+  }
+  .selected{
+    color: white;
+  }
+
 </style>
 </head>
 <body>
 
-
 <!-- Navigation -->
-	<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-	  <div class="container">
-		<div class="navbar-header">
-		  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-					</button>
-          <a href="./index.html" class="navbar-brand">Rui Guan</a>
-		</div>
+<nav>
+  <div class="left-links">
+    <a class="links"  href="index.html">Rui Guan</a>
+ 
+  </div>
+  <div class="right-links">
 
-		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		  <ul class="nav navbar-nav" style="text-align: right;">
-				  <li><a href="index.html">Home</a></li>
-				  <li><a href="research.html">Research</a></li>
-		  </ul>
-		</div>
-	  </div>
-	</nav>
+  <a class="links"  href="index.html">Home</a>
+   <a class="links"  href="research.html">Research</a>
+  </div>
+  </nav>
   <!-- Page Content -->
 
+  <br>
+  <br>
+  <br>
   <br>
   <br>
     <div class="container">
@@ -80,19 +103,13 @@
                   <li>Experimental Economics</li>
               </ul>
               </div>
-              <br>
+              
               <div class="col-md-8">
+                <br>
                 <p>Email: <a href="mailto: rui.guan@upf.edu">rui.guan@upf.edu</a> </p>
                 <br>
                 <p>Here is my <a href="./asset/cv.pdf">Curriculum Vitae</a>. </p>
               </div>
-            
-
-              <!-- <p style="color:#851e1e">
-                  <b>
-                  News:<br>
-                  </b>
-              </p> -->
           </div>
         </div>
 
