--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               
               <div class="col-md-8">
                 <br>
-                <p>Email: <a href="mailto: rui.guan@upf.edu">rui.guan@upf.edu</a> </p>
+                <p>Email: <a href="mailto: rui.guan@upf.edu">rui.guan@upf.edu</a>.</p>
                 <br>
                 <p>Here is my <a href="./asset/cv.pdf">Curriculum Vitae</a>. </p>
               </div>
