--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
  
   </div>
   <div class="right-links">
-
   <a class="links"  href="index.html">Home</a>
-   <a class="links"  href="research.html">Research</a>
+  <a class="links"  href="research.html">Research</a>
   </div>
   </nav>
   <!-- Page Content -->
@@ -96,7 +95,7 @@
               <p>I am a Ph.D. candidate in Economics at <a href="https://www.upf.edu/en/web/econ" target="_blank">Universitat Pompeu Fabra</a>. My research focuses on examining when individuals behave rationally based on evidence from economics and the cognitive sciences.</p><br>
 
               <div class="col-md-6">
-              <p><b>Reseaerch Interests:</b></p>
+              <p style="font-size: 18px;"><b>Reseaerch Interests:</b></p>
                 <ul  style="text-align: lef;">
                   <li>Microeconomics</li>
                   <li>Behavioral Economics</li>
