--- a/research.html
+++ b/research.html
@@ -28,6 +28,8 @@
     background-color: black;
     overflow: auto;
     height: auto;
+    padding-left: 15px;
+    padding-right: 15px;
   }
   .left-links{
     flex:1 1 200px;
