--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+
+
+
   <style>
   p {
     font-size: 16px;
@@ -34,9 +37,13 @@
     background-color: black;
     overflow: auto;
     height: auto;
+    padding: 0;
+    padding-left: 15px;
+    padding-right: 15px;
   }
   .left-links{
     flex:1 1 200px;
+  
   }
   .links {
     display: inline-block;
@@ -54,6 +61,7 @@
     color: white;
   }
 
+  
 </style>
 </head>
 <body>
@@ -67,8 +75,13 @@
   <div class="right-links">
   <a class="links"  href="index.html">Home</a>
   <a class="links"  href="research.html">Research</a>
+
   </div>
+    <!--/.navbar-collapse -->
+ </div>
   </nav>
+
+ 
   <!-- Page Content -->
 
   <br>
