--- a/research.html
+++ b/research.html
@@ -80,7 +80,7 @@
 
         <div class="row">
             <div class="col-md-10" style="height">
-                <h2 id="slides">Working Papers</h2>
+                <h2 id="slides">Research Papers</h2>
                 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
                 <br>
                 <p>
@@ -95,16 +95,16 @@
                 <p>
                   <strong>Making Decisions By Seeing or Hearing? The Role of Senses on Economic Rationality </strong> (with Fadong Chen)
                 </p> 
-                <p> <i>Abstract:</i> Human choice behavior primarily depends on two basic senses: sight and hearing. However, there is little research on whether the economic consequences of making decisions with these two senses differ. This paper examines this question with respect to economic rationality, the fundamental criteria of economics. We design and implement a novel experiment where subjects are randomly assigned to make decisions by hearing or by seeing. We find that making decisions by hearing leads to severe impairment in economic rationality. Strikingly, subjects who hear the options violate economic rationality of up to 162\% more times and waste their budgets of up to 129\% more than those who see the options. We also find that subjects spend more time making decisions when hearing the options than when seeing the options. Furthermore, individuals, especially females, reveals lower risk aversion when making decisions by hearing than by seeing. Our results highlight the importance of basic senses in economic decision-making.
+                <p> <i>Abstract:</i> Human choice behavior primarily depends on two basic senses: seeing and hearing. However, there is little research on whether the economic consequences of making decisions with these two senses differ. This paper examines this question with respect to economic rationality. We design and implement a randomized controlled experiment where subjects are randomly assigned to make decisions by hearing or by seeing. We find that making decisions by hearing, compared to seeing, leads to severe impairment in economic rationality. We also find that subjects spend more time making decisions when hearing the options than when seeing the options. Furthermore, subjects, especially females, reveal lower risk aversion when making decisions by hearing than by seeing. Our results highlight the importance of basic senses in economic decision-making.
                 </p>
                 <br>
                 <br>
                 <br>
            
-            <h2 id="slides">Work in Progress</h2>
+            <h2 id="slides">Research in Progress</h2>
             <hr style="height:1px;border-width:0;color:gray;background-color:gray">
             <p>
-              <strong>Dynamic Stochastic Consideration and Bounded Memory</strong> 
+              <strong>Dynamic Stochastic Consideration</strong> 
             </p> 
             <br>
 
