--- a/research.html
+++ b/research.html
@@ -80,7 +80,7 @@
 
         <div class="row">
             <div class="col-md-10" style="height">
-                <h2 id="slides">Research Papers</h2>
+                <h2 id="slides">Working Papers</h2>
                 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
                 <br>
                 <p>
@@ -101,7 +101,7 @@
                 <br>
                 <br>
            
-            <h2 id="slides">Research in Progress</h2>
+            <h2 id="slides">Work in Progress</h2>
             <hr style="height:1px;border-width:0;color:gray;background-color:gray">
             <p>
               <strong>Dynamic Stochastic Consideration</strong> 
