--- a/research.html
+++ b/research.html
@@ -93,7 +93,7 @@
                 <br>
 
                 <p>
-                  <strong>Making Decisions by Seeing or Hearing? The Role of Senses on Economic Rationality </strong> (with Fadong Chen，<a href="./asset/hearing.pdf">Preliminary Draft</a>)
+                  <strong>Making Decisions by Seeing or Hearing? The Role of Basic Senses on Economic Rationality </strong> (with Fadong Chen，<a href="./asset/hearing.pdf">Preliminary Draft</a>)
                 </p> 
                 <p> <i>Abstract:</i> Human choice behavior primarily depends on two basic senses: seeing and hearing. However, there is little research on whether the economic consequences of making decisions with these two senses differ. This paper examines this question with respect to economic rationality. We design and implement a controlled laboratory experiment where subjects are randomly assigned to make decisions by hearing or by seeing. We find that making decisions by hearing, compared to seeing, leads to severe impairment in economic rationality. We also find that subjects spend more time making decisions when hearing the options than when seeing the options. Furthermore, subjects, especially females, reveal lower risk aversion when making decisions by hearing than by seeing. Our results highlight the importance of basic senses in economic decision-making.
                 </p>
