--- a/research.html
+++ b/research.html
@@ -106,6 +106,8 @@
             <p>
               <strong>Dynamic Stochastic Consideration</strong> 
             </p> 
+            <p> <i>Abstract:</i> I study stochastic consideration in the context of dynamic choice problems. I introduce new axioms to the framework of Manzini and Mariotti (2014). The decision maker chooses the best alternative from a subset of all feasible alternatives, i.e., consideration set. The decision maker considers each feasible alternative with a probability, which increases if the alternative was chosen in history. I show that the decision maker's preference relation and the dynamic stochastic consideration are uniquely identified with sufficient conditions on a dynamic stochastic choice data set. I also propose an experimental design to test the implications of the model. 
+            </p>
             <br>
 
             <br>
