--- a/research.html
+++ b/research.html
@@ -109,9 +109,13 @@
             <p> <i>Abstract:</i> I study stochastic consideration in the context of dynamic choice problems. I introduce new axioms to the framework of Manzini and Mariotti (2014). The decision maker chooses the best alternative from a subset of all feasible alternatives, i.e., consideration set. The decision maker considers each feasible alternative with a probability, which increases if the alternative was chosen in history. I show that the decision maker's preference relation and the dynamic stochastic consideration are uniquely identified with sufficient conditions on a dynamic stochastic choice data set. I also propose an experimental design to test the implications of the model. 
             </p>
             <br>
-
             <br>
             <br>
+            <p>
+              <strong>When Do Individuals Prioritize Important Tasks?</strong> 
+            </p> 
+            <p> <i>Abstract:</i> It is commonly observed that individuals face multiple tasks yet fail to prioritize tasks with important economic consequences. I study when a decision maker prioritizes important tasks by a simple framework of dynamic decision-making. I show that a decision maker prioritizes important tasks by the task decomposition procedure. To test the implications, I design an experiment in which the task decomposition procedure is either provided or not.
+            </p>
             <br>
             <br>
             <br>
