--- a/research.html
+++ b/research.html
@@ -84,7 +84,7 @@
                 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
                 <br>
                 <p>
-                  <strong>Individual Rationality under Cognitive Limitations: The Effect of Sequential Elimination </strong> (<a href="./asset/jmp.pdf">Job Market Paper</a>) 
+                  <strong>Individual Rationality under Cognitive Limitations: The Effect of Sequential Elimination </strong> (<a href="./asset/SE_Guan.pdf">Job Market Paper</a>) 
                 </p> 
                 <p> <i>Abstract:</i> I study individual consistency with preference maximization by examining two choice procedures: namely, the direct procedure, where people choose directly from the menu, and the sequential elimination procedure, where they sequentially eliminate alternatives until only one survives. In a limited attention framework, I show that, in sequential elimination, the choices made by a decision maker faced with at least two available alternatives are consistent with preference maximization, whereas this is not necessarily the case in the direct procedure. To test empirically whether sequential elimination facilitates consistency, I implement an experiment in which subjects are randomly assigned to a risky decision-making task involving one of the two procedures. I find evidence that sequential elimination leads to an economically meaningful improvement in the consistency of subjects with low cognitive ability. Next, I explore the factors that influence individual preference for sequential elimination. Finally, I investigate the impacts of sequential elimination on risk preferences and individual satisfaction.
                 </p>
