--- a/research.html
+++ b/research.html
@@ -93,9 +93,9 @@
                 <br>
 
                 <p>
-                  <strong>Making Decisions by Seeing or Hearing? The Role of Basic Senses on Economic Rationality </strong> (with Fadong Chen)
+                  <strong>Perceptual descriptions of decisions and their economic implications </strong> (with Fadong Chen)
                 </p> 
-                <p> <i>Abstract:</i> Human choice behavior primarily depends on two basic senses: seeing and hearing. However, there is little research on whether decision-making through these two senses can have different economic consequences. This paper examines this question with respect to economic rationality. We design and implement a controlled laboratory experiment where subjects are randomly assigned to make decisions by hearing or by seeing the options. We find that making decisions by hearing, compared to by seeing, leads to severe impairment in economic rationality. We also find that subjects spend more time deciding when hearing the options than when seeing the options. Furthermore, subjects, especially females, reveal lower risk aversion when making decisions by hearing than by seeing. Our results highlight the importance of basic senses in economic decision-making.
+                <p> <i>Abstract:</i> Human choice behavior depends on the perception of decisions. However, there is little research on the economic consequences of different perceptual descriptions. We implement a randomized controlled experiment to examine how auditory versus visual descriptions of the options influence economic choice behavior. We find that providing auditory descriptions, as compared to visual descriptions, leads to severe impairment in economic rationality and longer response time. In addition, auditory descriptions result in less risk-averse choices than visual descriptions; this is especially significant for females. Our results raise a concern about welfare loss in choice contexts where auditory descriptions play a major role.
                 </p>
                 <br>
                 <br>
