--- a/research.html
+++ b/research.html
@@ -93,7 +93,7 @@
                 <br>
 
                 <p>
-                  <strong>Perceptual descriptions of decisions and their economic implications </strong> (with Fadong Chen)
+                  <strong>Perceptual Descriptions of Decisions and Their Economic Implications </strong> (with Fadong Chen)
                 </p> 
                 <p> <i>Abstract:</i> Human choice behavior depends on the perception of decisions. However, there is little research on the economic consequences of different perceptual descriptions. We implement a randomized controlled experiment to examine how auditory versus visual descriptions of the options influence economic choice behavior. We find that providing auditory descriptions, as compared to visual descriptions, leads to severe impairment in economic rationality and longer response time. In addition, auditory descriptions result in less risk-averse choices than visual descriptions; this is especially significant for females. Our results raise a concern about welfare loss in choice contexts where auditory descriptions play a major role.
                 </p>
