--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
               <br>
               <p>Welcome to my website! </p>
            
-              <p>I am a Ph.D. candidate in Economics at <a href="https://www.upf.edu/en/web/econ" target="_blank">Universitat Pompeu Fabra</a>. My research focuses on the effects of different choice procedures on economic rationality.</p><br>
+              <p>I am a Lecturer in Economics at the School of Economics at the University of Kent. </p>
+
+              <p>I hold a PhD in Economics from Universitat Pompeu Fabra. My research focuses on the effects of different choice procedures on economic rationality.</p><br>
 
               <div class="col-md-6">
               <p style="font-size: 18px;"><b>Reseaerch Interests:</b></p>
