--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   <div class="right-links">
   <a class="links"  href="index.html">Home</a>
   <a class="links"  href="research.html">Research</a>
+  <a class="links" href="./asset/cv.pdf">CV</a>
 
   </div>
     <!--/.navbar-collapse -->
@@ -120,9 +121,8 @@
               
               <div class="col-md-8">
                 <br>
-                <p>Email: <a href="mailto: rui.guan@upf.edu">rui.guan@upf.edu</a>.</p>
-                <br>
-                <p>Here is my <a href="./asset/cv.pdf">Curriculum Vitae</a>. </p>
+                <p>Email: <a href="mailto: r.guan@kent.ac.uk">r.guan@kent.ac.uk</a>.</p>
+                </p>
               </div>
           </div>
         </div>
