--- a/research.html
+++ b/research.html
@@ -65,6 +65,7 @@
 
   <a class="links"  href="index.html">Home</a>
    <a class="links"  href="research.html">Research</a>
+   <a class="links" href="./asset/cv.pdf">CV</a>
   </div>
   </nav>
   <!-- Page Content -->
