--- a/research.html
+++ b/research.html
@@ -81,7 +81,7 @@
 
         <div class="row">
             <div class="col-md-10" style="height">
-                <h2 id="slides">Research Papers</h2>
+                <h2 id="slides">Working Papers</h2>
                 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
                 <br>
                 <p>
