--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
            
               <p>I am a Lecturer in Economics at the School of Economics at the University of Kent. </p>
 
-              <p>I hold a PhD in Economics from Universitat Pompeu Fabra. My research focuses on the effects of different choice procedures on economic rationality.</p><br>
+              <p>I hold a PhD in Economics from the Universitat Pompeu Fabra. My research focuses on the effects of different choice procedures on economic rationality.</p><br>
 
               <div class="col-md-6">
               <p style="font-size: 18px;"><b>Reseaerch Interests:</b></p>
