--- a/research.html
+++ b/research.html
@@ -85,7 +85,7 @@
                 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
                 <br>
                 <p>
-                  <strong>Individual Rationality under Cognitive Limitations: The Effect of Sequential Elimination</strong> (<a href="./asset/se_guan.pdf">Link</a>)
+                  <strong>Individual Rationality under Cognitive Limitations: The Effect of Sequential Elimination</strong> (<a href="./asset/seqelim.pdf">Link</a>)
                 </p> 
                 <p> <i>Abstract:</i> I study individual consistency with preference maximization by examining two choice procedures: namely, the direct procedure, where people choose directly from the menu, and the sequential elimination procedure, where they sequentially eliminate alternatives until only one survives. I first show formally that, in a limited attention framework, the choices made by a decision maker who considers at least two available alternatives under sequential elimination are consistent with preference maximization, whereas this is not necessarily the case under the direct procedure. To test empirically whether sequential elimination facilitates consistency, I implement an experiment in which subjects are randomly assigned to a risky decision-making task involving one of the two procedures. I find evidence that sequential elimination leads to an economically meaningful improvement in individual consistency, especially for subjects with low cognitive ability. Next, I investigate the determinants of individual preference for sequential elimination and the impact of sequential elimination on risk preferences. Finally, I discuss the policy implications of the results.
                 </p>
