--- a/research.html
+++ b/research.html
@@ -81,31 +81,26 @@
 
         <div class="row">
             <div class="col-md-10" style="height">
-                <h2 id="slides">Working Papers</h2>
+                <h2 id="slides">Research Papers</h2>
                 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
                 <br>
                 <p>
                   <strong>Economic Rationality under Limited Attention: The Effect of Sequential Elimination</strong> (<a href="./asset/seqelim.pdf">Link</a>)
                 </p> 
-                <p> <i>Abstract:</i> Evidence suggests that individual behavior may deviate from preference maximization due to limited attention to alternatives. I study this issue by developing a framework that incorporates choice procedures where individuals consider at least two available alternatives. I show that choices made under \textit{sequential elimination} (where individuals sequentially eliminate alternatives until only one survives) always maximize preferences, whereas choices made directly from menus do not. Using a controlled experiment, I find that sequential elimination substantially improves individual consistency with preference maximization, especially for subjects with low cognitive ability. Moreover, I explore individual preferences for sequential elimination and their implications.
-                </p>
                 <br>
                 <br>
 
                 <p>
-                  <strong>Perceptual Descriptions of Decisions and Their Economic Implications </strong> (with Fadong Chen)
+                  <strong>Perceptual Descriptions of Decisions and Their Economic Implications </strong> (joint with Fadong Chen, coming soon)
                 </p> 
-                <p> <i>Abstract:</i> Human choice behavior depends on the perception of decisions. However, there is little research on the economic consequences of different perceptual descriptions. We implement a randomized controlled experiment to examine how auditory versus visual descriptions of the options influence economic choice behavior. We find that providing auditory descriptions, as compared to visual descriptions, leads to severe impairment in economic rationality and longer response time. In addition, auditory descriptions result in less risk-averse choices than visual descriptions; this is especially significant for females. Our results raise a concern about welfare loss in choice contexts where auditory descriptions play a major role.
-                </p>
                 <br>
                 <br>
                 <br>
            
-            <h2 id="slides">Work in Progress</h2>
+            <h2 id="slides">Research in Progress</h2>
             <hr style="height:1px;border-width:0;color:gray;background-color:gray">
             <p>
               <strong>Dynamic Stochastic Consideration</strong> 
-         
             <br>
             <br>
             <br>
