--- a/research.html
+++ b/research.html
@@ -91,7 +91,7 @@
                 <br>
 
                 <p>
-                  <strong>Perceptual Descriptions of Decisions and Their Economic Implications </strong> (joint with Fadong Chen, coming soon)
+                  <strong>Divergence in Economic Decision Making: The Role of Perceptual Descriptions </strong> (joint with Fadong Chen, coming soon)
                 </p> 
                 <br>
                 <br>
