--- a/research.html
+++ b/research.html
@@ -89,7 +89,6 @@
                 </p> 
                 <br>
                 <br>
-
                 <p>
                   <strong>Divergence in Economic Decision Making: The Role of Perceptual Descriptions </strong> (joint with Fadong Chen, coming soon)
                 </p> 
@@ -101,9 +100,12 @@
             <hr style="height:1px;border-width:0;color:gray;background-color:gray">
             <p>
               <strong>Dynamic Stochastic Consideration</strong> 
+            </p> 
             <br>
             <br>
-            <br>
+            <p>
+              <strong>New Behavioral Strategies in Mobile Advertising Markets: Evidence from Large-Scale Field Experiments </strong> (joint with Zhengyang Bao and Fadong Chen)
+            </p> 
             <br>
             <br>
             <br>
