--- a/research.html
+++ b/research.html
@@ -85,7 +85,7 @@
                 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
                 <br>
                 <p>
-                  <strong>Economic Rationality under Limited Attention: The Effect of Sequential Elimination</strong> (<a href="./asset/seqelim.pdf">Link</a>)
+                  <strong>Economic Rationality under Limited Attention: The Effect of Sequential Elimination</strong> (<a href="./paper/seqelim.pdf">Link</a>)
                 </p> 
                 <br>
                 <br>
