--- a/research.html
+++ b/research.html
@@ -90,7 +90,7 @@
                 <br>
                 <br>
                 <p>
-                  <strong>Divergence in Economic Decision Making: The Role of Perceptual Descriptions </strong> (joint with Fadong Chen, coming soon)
+                  <strong>A Sound Decision? The Impact of Audio Descriptions on Economic Rationality </strong> (joint with Fadong Chen, coming soon)
                 </p> 
                 <br>
                 <br>
@@ -99,12 +99,12 @@
             <h2 id="slides">Research in Progress</h2>
             <hr style="height:1px;border-width:0;color:gray;background-color:gray">
             <p>
-              <strong>Dynamic Stochastic Consideration</strong> 
+              <strong>New Behavioral Strategies in Mobile Advertising Markets: Evidence from Large-Scale Field Experiments </strong> (joint with Zhengyang Bao and Fadong Chen)
             </p> 
             <br>
             <br>
             <p>
-              <strong>New Behavioral Strategies in Mobile Advertising Markets: Evidence from Large-Scale Field Experiments </strong> (joint with Zhengyang Bao and Fadong Chen)
+              <strong>Dynamic Stochastic Consideration</strong>   
             </p> 
             <br>
             <br>
