--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <!-- Entries Column -->
             <div class="col-md-4" style="height">
               <!-- Main Image -->
-              <img class="img-responsive" width="250" src="./asset/profile.jpg" alt=""><br>
+              <img class="img-responsive" width="250" src="./asset/Profile.jpg" alt=""><br>
               <!--                <div style="margin-top:3%; text-align:justify;">
               </div> -->
           </div>
