--- a/research.html
+++ b/research.html
@@ -81,41 +81,27 @@
 
         <div class="row">
             <div class="col-md-10" style="height">
-                <h2 id="slides">Research Papers</h2>
+                <h2 id="slides">Research Papers and Research in Progress</h2>
                 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
                 <br>
                 <p>
                   <strong>Economic Rationality under Limited Attention: The Effect of Sequential Elimination</strong> (<a href="./paper/ERuLA.pdf">Link</a>)
                 </p> 
                 <br>
-                <br>
                 <p>
                   <strong>A Sound Decision? The Impact of Audio Descriptions on Economic Rationality </strong> (joint with Fadong Chen, coming soon)
                 </p> 
                 <br>
+                <p>
+                  <strong>New Behavioral Strategies in Mobile Advertising Markets: Evidence from Large-Scale Field Experiments </strong> (joint with Zhengyang Bao and Fadong Chen)
+                </p> 
+                <br>
+                <p>
+                  <strong>Dynamic Stochastic Consideration</strong>   
+                </p> 
                 <br>
                 <br>
-           
-            <h2 id="slides">Research in Progress</h2>
-            <hr style="height:1px;border-width:0;color:gray;background-color:gray">
-            <p>
-              <strong>New Behavioral Strategies in Mobile Advertising Markets: Evidence from Large-Scale Field Experiments </strong> (joint with Zhengyang Bao and Fadong Chen)
-            </p> 
-            <br>
-            <br>
-            <p>
-              <strong>Dynamic Stochastic Consideration</strong>   
-            </p> 
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
+                <br>
           </div>
         </div>
 
