--- a/research.html
+++ b/research.html
@@ -89,7 +89,7 @@
                 </p> 
                 <br>
                 <p>
-                  <strong>A Sound Decision? The Impact of Audio Descriptions on Economic Rationality </strong> (joint with Fadong Chen, coming soon)
+                  <strong>A Sound Decision? The Impact of Audio Descriptions on Economic Rationality </strong> (joint with Fadong Chen)
                 </p> 
                 <br>
                 <p>
