--- a/research.html
+++ b/research.html
@@ -81,7 +81,7 @@
 
         <div class="row">
             <div class="col-md-10" style="height">
-                <h2 id="slides">Working Papers and Work in Progress</h2>
+                <h2 id="slides">Working Papers/h2>
                 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
                 <br>
                 <p>
@@ -92,9 +92,22 @@
                   <strong>A Sound Decision? The Impact of Audio Descriptions on Economic Rationality </strong> (joint with Fadong Chen)
                 </p> 
                 <br>
+             
+                <br>
+                <br>
+                <br>
+                <h2 id="slides">Work in Progress</h2>
+                <hr style="height:1px;border-width:0;color:gray;background-color:gray">
+                <br>
                 <p>
                   <strong>New Behavioral Strategies in Mobile Advertising Markets: Evidence from Large-Scale Field Experiments </strong> (joint with Zhengyang Bao and Fadong Chen)
                 </p> 
+                <br>
+                <p>
+                  <strong>Dynamic Stochastic Consideration</strong>   
+                </p> 
+                <br>
+                <br>
                 <br>
           </div>
         </div>
