--- a/research.html
+++ b/research.html
@@ -89,7 +89,7 @@
                 </p> 
                 <br>
                 <p>
-                  <strong>A Sound Decision? The Impact of Audio Descriptions on Economic Rationality </strong> (joint with Fadong Chen)
+                  <strong>A Sound Decision? The Impact of Audio Descriptions on Economic Rationality </strong> (with Fadong Chen)
                 </p> 
                 <br>
                 <br>
@@ -97,11 +97,11 @@
                 <hr style="height:1px;border-width:0;color:gray;background-color:gray">
                 <br>
                 <p>
-                  <strong>New Behavioral Strategies in Mobile Advertising Markets: Evidence from Large-Scale Field Experiments </strong> (joint with Zhengyang Bao and Fadong Chen)
+                    <strong>Dynamic Stochastic Consideration</strong>  <!-- <strong>New Behavioral Strategies in Mobile Advertising Markets: Evidence from Large-Scale Field Experiments </strong> (joint with Zhengyang Bao and Fadong Chen)--> 
                 </p> 
                 <br>
                 <p>
-                  <strong>Dynamic Stochastic Consideration</strong>   
+                    <strong>Fair Cooperation</strong> (with Andis Sofianos) 
                 </p> 
                 <br>
                 <br>
