--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <br>
               <p>Welcome to my website! </p>
            
-              <p>I am a Lecturer in Economics at the School of Economics at the University of Kent. </p>
+              <p>I am a Lecturer in Economics at the Department of Economics at the University of Kent. </p>
 
               <p>I hold a PhD in Economics from the Universitat Pompeu Fabra. My research focuses on the effects of different choice procedures on economic rationality.</p><br>
 
